--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
                 <p class="info-form">Subscribe</p>
                 <form class="modal-form">
                     <label class="modal-label-foter">
-                        <input class="input-modal-foter" type="name" type="email" placeholder="E-mail">
+                        <input class="input-modal-foter" type="email" placeholder="E-mail">
                     </label>
                     <button class="click-modal-form" type="submit" data-modal-open>Subscribe
                         <svg class="svg-modal-foter" width="24" height="24">
@@ -375,16 +375,16 @@
                 <div class="div-modal-form">
                     <label class="label-modal" for="user-name">Name</label>
                     <div class="text-modal">
-                        <input class="tabl-input" id="user-name" type="text">
+                        <input class="tabl-input" id="user-name" name="user-name" type="text">
                         <svg class="phone-svg" width="18" height="24">
                             <use href="./images/modal-spryte.svg#icon-person-black"></use>
                         </svg>
                     </div>
                 </div>
                 <div class="div-modal-form">
-                    <label class="label-modal" for="tour-phone">Phone</label>
+                    <label class="label-modal" for="your-phone">Phone</label>
                     <div class="text-modal">
-                        <input class="tabl-input" id="your-phone" type="number">
+                        <input class="tabl-input" id="your-phone" name="your-phone" type="number">
                         <svg class="phone-svg" width="18" height="24">
                             <use href="./images/modal-spryte.svg#icon-phone-black"></use>
                         </svg>
@@ -393,7 +393,7 @@
                 <div class="div-modal-form">
                     <label class="label-modal" for="your-email">Email</label>
                     <div class="text-modal">
-                        <input class="tabl-input" id="your-email" type="email">
+                        <input class="tabl-input" id="your-email" name="your-email" type="email">
                         <svg class="phone-svg" width="18" height="24">
                             <use href="./images/modal-spryte.svg#icon-email-black"></use>
                         </svg>
@@ -401,7 +401,7 @@
                 </div>
                 <div class="div-coment">
                     <label class="label-modal" for="user-comment">Comment</label>
-                    <textarea class="coment-user" id="user-comment" placeholder="Text input"></textarea>
+                    <textarea class="coment-user" id="user-comment" name="user-name" placeholder="Text input"></textarea>
                 </div>
                 <div class="div-box">
                     <input class="input-box visually-hidden" id="user-privacy" type="checkbox" value="true" name="user-privacy">
