update summary file

--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
                 <p class="info-form">Subscribe</p>
                 <form class="modal-form">
                     <label class="modal-label-foter">
-                        <input class="input-modal-foter" type="email" placeholder="E-mail">
+                        <input class="input-modal-foter" type="email" name="email" placeholder="E-mail">
                     </label>
                     <button class="click-modal-form" type="submit" data-modal-open>Subscribe
                         <svg class="svg-modal-foter" width="24" height="24">
@@ -401,7 +401,7 @@
                 </div>
                 <div class="div-coment">
                     <label class="label-modal" for="user-comment">Comment</label>
-                    <textarea class="coment-user" id="user-comment" name="user-name" placeholder="Text input"></textarea>
+                    <textarea class="coment-user" id="user-comment"  name="user-comment" placeholder="Text input"></textarea>
                 </div>
                 <div class="div-box">
                     <input class="input-box visually-hidden" id="user-privacy" type="checkbox" value="true" name="user-privacy">
