--- a/index.html
+++ b/index.html
@@ -375,7 +375,11 @@
                 <div class="div-modal-form">
                     <label class="label-modal" for="user-name">Name</label>
                     <div class="text-modal">
-                        <input class="tabl-input" id="user-name" name="user-name" type="text">
+                        <input 
+                        class="tabl-input" 
+                        id="user-name" 
+                        name="user-name" 
+                        type="text">
                         <svg class="phone-svg" width="18" height="24">
                             <use href="./images/modal-spryte.svg#icon-person-black"></use>
                         </svg>
@@ -384,7 +388,11 @@
                 <div class="div-modal-form">
                     <label class="label-modal" for="your-phone">Phone</label>
                     <div class="text-modal">
-                        <input class="tabl-input" id="your-phone" name="your-phone" type="number">
+                        <input 
+                        class="tabl-input" 
+                        id="your-phone" 
+                        name="your-phone" 
+                        type="number">
                         <svg class="phone-svg" width="18" height="24">
                             <use href="./images/modal-spryte.svg#icon-phone-black"></use>
                         </svg>
@@ -393,7 +401,11 @@
                 <div class="div-modal-form">
                     <label class="label-modal" for="your-email">Email</label>
                     <div class="text-modal">
-                        <input class="tabl-input" id="your-email" name="your-email" type="email">
+                        <input 
+                        class="tabl-input" 
+                        id="your-email" 
+                        name="your-email" 
+                        type="email">
                         <svg class="phone-svg" width="18" height="24">
                             <use href="./images/modal-spryte.svg#icon-email-black"></use>
                         </svg>
@@ -401,17 +413,28 @@
                 </div>
                 <div class="div-coment">
                     <label class="label-modal" for="user-comment">Comment</label>
-                    <textarea class="coment-user" id="user-comment"  name="user-comment" placeholder="Text input"></textarea>
+                    <textarea 
+                    class="coment-user" 
+                    id="user-comment"  
+                    name="user-comment"></textarea>
                 </div>
                 <div class="div-box">
-                    <input class="input-box visually-hidden" id="user-privacy" type="checkbox" value="true" name="user-privacy">
-                    <label class="label-box" for="user-privacy"> I accept the terms and conditions of the
-                        <span class="span-modal-box">
+                    <input 
+                    class="input-box visually-hidden" 
+                    id="user-privacy" 
+                    type="checkbox" 
+                    value="true" 
+                    name="user-privacy">
+                    <label 
+                    class="label-box" 
+                    for="user-privacy">
+                        <span class="info-privacy">
                             <svg class="svg-span-box" width="10" height="8">
                                 <use href="./images/modal-spryte.svg#icon-checkbox">
                                 </use>
                             </svg>
                         </span>
+                        I accept the terms and conditions of the
                         <a class="link-modal" href="">Privacy Policy</a>
                     </label>
                 </div>
