--- a/index.html
+++ b/index.html
@@ -424,7 +424,8 @@
                     id="user-privacy" 
                     type="checkbox" 
                     value="true" 
-                    name="user-privacy">
+                    name="user-privacy"
+                    placeholder="Text input">
                     <label 
                     class="label-box" 
                     for="user-privacy">
