create index.html file

--- a/index.html
+++ b/index.html
@@ -416,7 +416,9 @@
                     <textarea 
                     class="coment-user" 
                     id="user-comment"  
-                    name="user-comment"></textarea>
+                    name="user-comment"
+                    placeholder="Text input">
+                    </textarea>
                 </div>
                 <div class="div-box">
                     <input 
@@ -424,8 +426,7 @@
                     id="user-privacy" 
                     type="checkbox" 
                     value="true" 
-                    name="user-privacy"
-                    placeholder="Text input">
+                    name="user-privacy">
                     <label 
                     class="label-box" 
                     for="user-privacy">
