crate summary file

--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
             </div>
         </div>
     </footer>
-    <div class="backdrop is-hide" data-modal>
+    <div class="backdrop is-hiden" data-modal>
         <div class="modal">
             <button class="madal-click" type="button">
                 <svg class="button-icon-svg"  width="8"  height="8">
@@ -392,7 +392,7 @@
                         class="tabl-input" 
                         id="your-phone" 
                         name="your-phone" 
-                        type="number">
+                        type="tel">
                         <svg class="phone-svg" width="18" height="24">
                             <use href="./images/modal-spryte.svg#icon-phone-black"></use>
                         </svg>
